--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /CoreJava/19 Package in Java/Addition/build/
 /CoreJava/19 Package in Java/Addition/dist/
 /CoreJava/19 Package in Java/Package_MPIF/build/
+/CoreJava/21 String in java/String/nbproject/private/
+/CoreJava/21 String in java/String/build/
