--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /CoreJava/19 Package in Java/Package_MPIF/build/
 /CoreJava/21 String in java/String/nbproject/private/
 /CoreJava/21 String in java/String/build/
+/CoreJava/22 Wrapper class/WrapperClassItep/nbproject/private/
+/CoreJava/22 Wrapper class/WrapperClassItep/build/
