--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /CoreJava/21 String in java/String/build/
 /CoreJava/22 Wrapper class/WrapperClassItep/nbproject/private/
 /CoreJava/22 Wrapper class/WrapperClassItep/build/
+/CoreJava/23 Collection Framework/Collectio_Framework/nbproject/private/
+/CoreJava/23 Collection Framework/Collectio_Framework/build/
