--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /CoreJava/22 Wrapper class/WrapperClassItep/build/
 /CoreJava/23 Collection Framework/Collectio_Framework/nbproject/private/
 /CoreJava/23 Collection Framework/Collectio_Framework/build/
+/CoreJava/24 JDBC/jdbc_examples/nbproject/private/
+/CoreJava/24 JDBC/jdbc_examples/build/
