--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /CoreJava/23 Collection Framework/Collectio_Framework/build/
 /CoreJava/24 JDBC/jdbc_examples/nbproject/private/
 /CoreJava/24 JDBC/jdbc_examples/build/
+/CoreJava/25 Swing/Swing/nbproject/private/
+/CoreJava/25 Swing/Swing/build/
